@@ -5,6 +5,7 @@ core 2.3.1 - not released yet
 	* Added: Button for scrolling to top, that appears when scrolling down on long pages
 	* Added: Hook for paging of lists
 	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)
+	* Changed: Headlet initialisation only if present (fullscreen-support)
 	* Bugfix: Fixed css for error-messages of checkboxes
 	* Bugifx: Fixed styling of quickinfo
 	* Bugfix: Right requirement wasn't parsed correctly if there is only one rights-section
